<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_tab"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/feed_tab"
        android:title="@string/feed"
        android:icon="@drawable/ic_web"
        app:showAsAction="always" />
    <item
        android:id="@+id/cart_tab"
        android:title="@string/cart"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always" />
    <item
        android:id="@+id/profile_tab"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="always" />
</menu>